--- a/scss/_atoms.scss
+++ b/scss/_atoms.scss
@@ -13,3 +13,6 @@
 .left { text-align: left; }
 .right { text-align: right; }
 .center { text-align: center; }
+
+.bg-red { background-color: $red; }
+.bg-navy { background-color: $navy; }
