--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -8,6 +8,15 @@ section {
 	padding: 100px 0;
 }
 
+.section-icon {
+	margin-bottom: 40px;
+	height: 100px;
+}
+
+.section-img {
+	height: 500px;
+}
+
 
 // ==========================================================
 // ----------------------------------------------------------
@@ -51,17 +60,18 @@ html { font-size: 16px; }
 
 	ul li {
 		display: inline-block;
-		padding-left: 100px;
+		padding-left: 75px;
 	}
 
 	ul li a {
 		font-size: 1.1em;
 		color: $navy;
-		opacity: .5;
+		opacity: .66;
 		font-weight: 500;
 		text-transform: uppercase;
 		transition: .2s opacity ease;
 		line-height: 1;
+		letter-spacing: 3px;
 		&:hover {
 			opacity: 1;
 		}
@@ -73,3 +83,68 @@ html { font-size: 16px; }
 		margin-top: 10px;
 	}
 
+
+// ==========================================================
+// ----------------------------------------------------------
+//  ABOUT SECTION
+// ----------------------------------------------------------
+// ==========================================================
+
+.about  {
+	color: $navy;
+}
+
+
+// ==========================================================
+// ----------------------------------------------------------
+//  FEED SECTION
+// ----------------------------------------------------------
+// ==========================================================
+
+.feed {
+	h2 { color: white; }
+	p {	color: white; }
+
+	.columns {
+		
+		@extend .center-content-vertically;
+	}
+}
+
+
+// ==========================================================
+// ----------------------------------------------------------
+//  ENDORSEMENT SECTION
+// ----------------------------------------------------------
+// ==========================================================
+
+.endorsement {
+	h2 { color: white; }
+	p {	color: white; }
+
+	.columns {
+		
+	}
+}
+
+
+// ==========================================================
+// ----------------------------------------------------------
+//  SHARE SECTION
+// ----------------------------------------------------------
+// ==========================================================
+
+.share {
+	h2 { 
+		color: white; 
+		text-shadow: 0 1px 1px $navy;
+	}
+	p {	
+		color: white; 
+		text-shadow: 0 1px 1px 0 $navy;
+	}
+
+	.columns {
+		
+	}
+}
