--- a/css/app.css
+++ b/css/app.css
@@ -6396,3 +6396,14 @@ html {
 .share p {
   color: white;
   text-shadow: 0 1px 1px 0 #2A374D; }
+
+.footer img {
+  width: 120px;
+  margin-top: 10px; }
+
+.footer ul {
+  text-align: right; }
+
+.footer ul li a {
+  color: white;
+  font-size: 1em; }
