--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -148,3 +148,24 @@ html { font-size: 16px; }
 		
 	}
 }
+
+
+// ==========================================================
+// ----------------------------------------------------------
+//  FOOTER
+// ----------------------------------------------------------
+// ==========================================================
+
+.footer {
+	img {
+		width: 120px;
+		margin-top: 10px;
+	}
+	ul {
+		text-align: right;
+	}
+	ul li a {
+		color: white;
+		font-size: 1em;
+	}
+}
