--- a/css/app.css
+++ b/css/app.css
@@ -124,7 +124,7 @@ select {
 
 .row {
   margin: 0 auto;
-  max-width: 90rem;
+  max-width: 81.25rem;
   width: 100%; }
   .row:before, .row:after {
     content: " ";
@@ -3957,7 +3957,7 @@ button:focus {
     .reveal-modal {
       left: 0;
       margin: 0 auto;
-      max-width: 90rem;
+      max-width: 81.25rem;
       right: 0;
       width: 80%; } }
   @media only screen and (min-width: 40.0625em) {
@@ -3973,35 +3973,35 @@ button:focus {
     .reveal-modal.tiny {
       left: 0;
       margin: 0 auto;
-      max-width: 90rem;
+      max-width: 81.25rem;
       right: 0;
       width: 30%; } }
   @media only screen and (min-width: 40.0625em) {
     .reveal-modal.small {
       left: 0;
       margin: 0 auto;
-      max-width: 90rem;
+      max-width: 81.25rem;
       right: 0;
       width: 40%; } }
   @media only screen and (min-width: 40.0625em) {
     .reveal-modal.medium {
       left: 0;
       margin: 0 auto;
-      max-width: 90rem;
+      max-width: 81.25rem;
       right: 0;
       width: 60%; } }
   @media only screen and (min-width: 40.0625em) {
     .reveal-modal.large {
       left: 0;
       margin: 0 auto;
-      max-width: 90rem;
+      max-width: 81.25rem;
       right: 0;
       width: 70%; } }
   @media only screen and (min-width: 40.0625em) {
     .reveal-modal.xlarge {
       left: 0;
       margin: 0 auto;
-      max-width: 90rem;
+      max-width: 81.25rem;
       right: 0;
       width: 95%; } }
   .reveal-modal.full {
@@ -4016,7 +4016,7 @@ button:focus {
       .reveal-modal.full {
         left: 0;
         margin: 0 auto;
-        max-width: 90rem;
+        max-width: 81.25rem;
         right: 0;
         width: 100%; } }
   .reveal-modal.toback {
@@ -4939,7 +4939,7 @@ meta.foundation-mq-topbar {
   .contain-to-grid .top-bar {
     margin-bottom: 0;
     margin: 0 auto;
-    max-width: 90rem; }
+    max-width: 81.25rem; }
   .top-bar-section {
     -webkit-transition: none 0 0;
             transition: none 0 0;
@@ -6254,7 +6254,7 @@ th.hide-for-touch {
   .show-for-print {
     display: none !important; } }
 
-.center-content-vertically, .hero, .nav, .feed .columns {
+.center-content-vertically, .hero, .feed .columns {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -6341,7 +6341,11 @@ html {
 .hero {
   height: 650px;
   color: white;
-  background-size: cover !important; }
+  background-size: cover !important;
+  text-align: center !important; }
+  @media only screen and (min-width: 64.0625em) {
+    .hero {
+      text-align: right !important; } }
 
 .hero__logo {
   width: 450px; }
@@ -6350,29 +6354,42 @@ html {
   margin-top: 50px;
   font-style: italic; }
 
-.nav {
-  height: 100px; }
-  .nav ul {
-    margin-top: 20px; }
-  .nav ul li {
-    display: inline-block;
-    padding-left: 75px; }
-  .nav ul li a {
-    font-size: 1.1em;
-    color: #2A374D;
-    opacity: .66;
-    font-weight: 500;
-    text-transform: uppercase;
-    -webkit-transition: .2s opacity ease;
-            transition: .2s opacity ease;
-    line-height: 1;
-    letter-spacing: 3px; }
-    .nav ul li a:hover {
-      opacity: 1; }
+.nav-aligner {
+  text-align: center; }
+  @media only screen and (min-width: 64.0625em) {
+    .nav-aligner {
+      text-align: right; } }
+
+.nav ul {
+  margin: 0; }
+
+.nav ul li {
+  display: inline-block;
+  padding: 0 15px; }
+  .nav ul li:first-child {
+    padding-left: 0; }
+  .nav ul li:last-child {
+    padding-right: 0; }
+  @media screen and (min-width: 450px) {
+    .nav ul li {
+      padding-left: 40px; } }
+
+.nav ul li a {
+  font-size: 1.1em;
+  color: #2A374D;
+  opacity: .66;
+  font-weight: 500;
+  text-transform: uppercase;
+  -webkit-transition: .2s opacity ease;
+          transition: .2s opacity ease;
+  line-height: 100px;
+  letter-spacing: 3px; }
+  .nav ul li a:hover {
+    opacity: 1; }
 
 .nav__logo {
   width: 120px;
-  margin-top: 10px; }
+  margin-top: 25px; }
 
 .about {
   color: #2A374D; }
