--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -17,6 +17,7 @@ section {
 	height: 500px;
 }
 
+html { font-size: 16px; }
 
 // ==========================================================
 // ----------------------------------------------------------
@@ -24,14 +25,18 @@ section {
 // ----------------------------------------------------------
 // ==========================================================
 
-html { font-size: 16px; }
-
 .hero {
 	height: 650px;
 	@extend .center-content-vertically;
 	color: white;
 
 	background-size: cover !important;
+
+	text-align: center !important;
+
+	@media #{$large-up} {
+		text-align: right !important;
+	}
 }
 	
 	.hero__logo {
@@ -50,17 +55,34 @@ html { font-size: 16px; }
 // ----------------------------------------------------------
 // ==========================================================
 
+.nav-aligner {
+	text-align: center;
+
+	@media #{$large-up} {
+		text-align: right;
+	}
+}
+
 .nav {
-	@extend .center-content-vertically;
-	height: 100px;
+	// @extend .center-content-vertically;
+	// height: 100px;
 
 	ul {
-		margin-top: 20px; // offsets the height difference with the logo
+		// margin-top: 20px; // offsets the height difference with the logo
+		margin: 0;
 	}
 
 	ul li {
 		display: inline-block;
-		padding-left: 75px;
+
+		padding: 0 15px;
+
+		&:first-child { padding-left: 0; }
+		&:last-child { padding-right: 0; }
+
+		@media screen and (min-width: 450px) {
+			padding-left: 40px;
+		}
 	}
 
 	ul li a {
@@ -70,7 +92,7 @@ html { font-size: 16px; }
 		font-weight: 500;
 		text-transform: uppercase;
 		transition: .2s opacity ease;
-		line-height: 1;
+		line-height: 100px;
 		letter-spacing: 3px;
 		&:hover {
 			opacity: 1;
@@ -80,7 +102,7 @@ html { font-size: 16px; }
 
 	.nav__logo {
 		width: 120px;
-		margin-top: 10px;
+		margin-top: 25px;
 	}
 
 
