--- a/scss/_atoms.scss
+++ b/scss/_atoms.scss
@@ -16,3 +16,6 @@
 
 .bg-red { background-color: $red; }
 .bg-navy { background-color: $navy; }
+.bg-white { background-color: #fff; }
+
+.text-white { color: white; }
