--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -27,6 +27,11 @@ html { font-size: 16px; }
 
 .hero {
 	height: 650px;
+
+	@media #{$small-only} {
+		height: 450px;
+	}
+
 	@extend .center-content-vertically;
 	color: white;
 
@@ -171,6 +176,85 @@ html { font-size: 16px; }
 	}
 }
 
+
+// ==========================================================
+// ----------------------------------------------------------
+//  CONTACT SECTION
+// ----------------------------------------------------------
+// ==========================================================
+
+.contact {
+	height: 650px;
+
+	@media #{$small-only} {
+		height: 350px;
+	}
+
+	@extend .center-content-vertically;
+
+	background: url("/img/contact-bg.jpg");
+	background-size: cover;
+	background-position: bottom center;
+}
+
+	#email-input {
+		height: 75px;
+		padding-left: 30px;
+		font-family: $font;
+		font-weight: 500;
+		font-size: 18px;
+
+		background: rgba(255,255,255,.6);
+		border: none;
+		border-radius: 10px;
+
+		// Placeholder styling
+		&::-webkit-input-placeholder {
+			color: $navy;
+			opacity: .5;
+			@media #{$small-only} { content: "Email..."; }
+		}	
+		&:-moz-placeholder {
+			color: $navy;
+			opacity: .5;
+		}	
+		&::-moz-placeholder {
+			color: $navy;
+			opacity: .5;
+		}	
+		&:-ms-input-placeholder {
+			color: $navy;
+			opacity: .5;
+		}	
+	}
+
+	#submit {
+		position: absolute;
+		bottom: 23px;
+		right: 38px;
+
+		height: 60px;
+		width: 60px;
+
+		border: none;
+		border-radius: 7px;
+
+		background-image: url("/img/plane.png");
+		background-size: 37px 34px;
+		@media #{$retina} { background-image: url("/img/plane@2x.png"); background-size: 37px 34px;}
+		background-repeat: no-repeat;
+		background-position: center;
+
+		background-color: $navy;
+		transition: .2s ease background-color;
+
+		&:hover {
+			background-color: lighten($navy, 3%);
+		}
+
+		// Make text invisible
+		color: rgba(0,0,0,0);
+	}
 
 // ==========================================================
 // ----------------------------------------------------------
