--- a/scss/_type.scss
+++ b/scss/_type.scss
@@ -1,6 +1,8 @@
 $font: "Fira Sans", 'Helvetica', 'Arial', sans-serif;
 $font-size-body: 1.375em;
 $font-size-heading: 3em;
+$font-size-body-mobile: $font-size-body * .8;
+$font-size-heading-mobile: $font-size-heading * .8;
 
 body { font-size: 100%; }
 
@@ -26,14 +28,27 @@ h4 {
 
 // Make Default Body Copy 22 points
 p {
-	font-size: $font-size-body;
+	font-size: $font-size-body-mobile;
 	line-height: 2;
+	
+	@media #{$large-up} {
+		font-size: $font-size-body;
+	}
 }
 
 // Heading Font Sizing
-h1 { font-size: $font-size-heading; }
-h2 { font-size: $font-size-heading * .9; }
-h3 { font-size: $font-size-heading * .8; }
-h4 { font-size: $font-size-heading * .7; }
-h5 { font-size: $font-size-heading * .6; }
-h6 { font-size: $font-size-heading * .5; }
+h1 { font-size: $font-size-heading-mobile; }
+h2 { font-size: $font-size-heading-mobile * .9; }
+h3 { font-size: $font-size-heading-mobile * .8; }
+h4 { font-size: $font-size-heading-mobile * .7; }
+h5 { font-size: $font-size-heading-mobile * .6; }
+h6 { font-size: $font-size-heading-mobile * .5; }
+
+@media #{$large-up} {
+	h1 { font-size: $font-size-heading; }
+	h2 { font-size: $font-size-heading * .9; }
+	h3 { font-size: $font-size-heading * .8; }
+	h4 { font-size: $font-size-heading * .7; }
+	h5 { font-size: $font-size-heading * .6; }
+	h6 { font-size: $font-size-heading * .5; }
+}
