finish off design

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -151,8 +151,8 @@ $column-gutter: rem-calc(60);
 // d. Media Query Ranges
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
-// $small-breakpoint:  em-calc(640);
-// $medium-breakpoint: em-calc(1024);
+$small-breakpoint:  em-calc(650);
+$medium-breakpoint: em-calc(1023);
 // $large-breakpoint:  em-calc(1440);
 // $xlarge-breakpoint: em-calc(1920);
 
