final changes before submission

--- a/css/app.css
+++ b/css/app.css
@@ -931,6 +931,384 @@ select {
     right: 91.6666666667%;
     left: auto; } }
 
+@media only screen and (min-width: 90.0625em) {
+  .xlarge-push-0 {
+    position: relative;
+    left: 0;
+    right: auto; }
+  .xlarge-pull-0 {
+    position: relative;
+    right: 0;
+    left: auto; }
+  .xlarge-push-1 {
+    position: relative;
+    left: 8.3333333333%;
+    right: auto; }
+  .xlarge-pull-1 {
+    position: relative;
+    right: 8.3333333333%;
+    left: auto; }
+  .xlarge-push-2 {
+    position: relative;
+    left: 16.6666666667%;
+    right: auto; }
+  .xlarge-pull-2 {
+    position: relative;
+    right: 16.6666666667%;
+    left: auto; }
+  .xlarge-push-3 {
+    position: relative;
+    left: 25%;
+    right: auto; }
+  .xlarge-pull-3 {
+    position: relative;
+    right: 25%;
+    left: auto; }
+  .xlarge-push-4 {
+    position: relative;
+    left: 33.3333333333%;
+    right: auto; }
+  .xlarge-pull-4 {
+    position: relative;
+    right: 33.3333333333%;
+    left: auto; }
+  .xlarge-push-5 {
+    position: relative;
+    left: 41.6666666667%;
+    right: auto; }
+  .xlarge-pull-5 {
+    position: relative;
+    right: 41.6666666667%;
+    left: auto; }
+  .xlarge-push-6 {
+    position: relative;
+    left: 50%;
+    right: auto; }
+  .xlarge-pull-6 {
+    position: relative;
+    right: 50%;
+    left: auto; }
+  .xlarge-push-7 {
+    position: relative;
+    left: 58.3333333333%;
+    right: auto; }
+  .xlarge-pull-7 {
+    position: relative;
+    right: 58.3333333333%;
+    left: auto; }
+  .xlarge-push-8 {
+    position: relative;
+    left: 66.6666666667%;
+    right: auto; }
+  .xlarge-pull-8 {
+    position: relative;
+    right: 66.6666666667%;
+    left: auto; }
+  .xlarge-push-9 {
+    position: relative;
+    left: 75%;
+    right: auto; }
+  .xlarge-pull-9 {
+    position: relative;
+    right: 75%;
+    left: auto; }
+  .xlarge-push-10 {
+    position: relative;
+    left: 83.3333333333%;
+    right: auto; }
+  .xlarge-pull-10 {
+    position: relative;
+    right: 83.3333333333%;
+    left: auto; }
+  .xlarge-push-11 {
+    position: relative;
+    left: 91.6666666667%;
+    right: auto; }
+  .xlarge-pull-11 {
+    position: relative;
+    right: 91.6666666667%;
+    left: auto; }
+  .column,
+  .columns {
+    position: relative;
+    padding-left: 1.875rem;
+    padding-right: 1.875rem;
+    float: left; }
+  .xlarge-1 {
+    width: 8.3333333333%; }
+  .xlarge-2 {
+    width: 16.6666666667%; }
+  .xlarge-3 {
+    width: 25%; }
+  .xlarge-4 {
+    width: 33.3333333333%; }
+  .xlarge-5 {
+    width: 41.6666666667%; }
+  .xlarge-6 {
+    width: 50%; }
+  .xlarge-7 {
+    width: 58.3333333333%; }
+  .xlarge-8 {
+    width: 66.6666666667%; }
+  .xlarge-9 {
+    width: 75%; }
+  .xlarge-10 {
+    width: 83.3333333333%; }
+  .xlarge-11 {
+    width: 91.6666666667%; }
+  .xlarge-12 {
+    width: 100%; }
+  .xlarge-offset-0 {
+    margin-left: 0 !important; }
+  .xlarge-offset-1 {
+    margin-left: 8.3333333333% !important; }
+  .xlarge-offset-2 {
+    margin-left: 16.6666666667% !important; }
+  .xlarge-offset-3 {
+    margin-left: 25% !important; }
+  .xlarge-offset-4 {
+    margin-left: 33.3333333333% !important; }
+  .xlarge-offset-5 {
+    margin-left: 41.6666666667% !important; }
+  .xlarge-offset-6 {
+    margin-left: 50% !important; }
+  .xlarge-offset-7 {
+    margin-left: 58.3333333333% !important; }
+  .xlarge-offset-8 {
+    margin-left: 66.6666666667% !important; }
+  .xlarge-offset-9 {
+    margin-left: 75% !important; }
+  .xlarge-offset-10 {
+    margin-left: 83.3333333333% !important; }
+  .xlarge-offset-11 {
+    margin-left: 91.6666666667% !important; }
+  .xlarge-reset-order {
+    float: left;
+    left: auto;
+    margin-left: 0;
+    margin-right: 0;
+    right: auto; }
+  .column.xlarge-centered,
+  .columns.xlarge-centered {
+    margin-left: auto;
+    margin-right: auto;
+    float: none; }
+  .column.xlarge-uncentered,
+  .columns.xlarge-uncentered {
+    float: left;
+    margin-left: 0;
+    margin-right: 0; }
+  .column.xlarge-centered:last-child,
+  .columns.xlarge-centered:last-child {
+    float: none; }
+  .column.xlarge-uncentered:last-child,
+  .columns.xlarge-uncentered:last-child {
+    float: left; }
+  .column.xlarge-uncentered.opposite,
+  .columns.xlarge-uncentered.opposite {
+    float: right; }
+  .row.xlarge-collapse > .column,
+  .row.xlarge-collapse > .columns {
+    padding-left: 0;
+    padding-right: 0; }
+  .row.xlarge-collapse .row {
+    margin-left: 0;
+    margin-right: 0; }
+  .row.xlarge-uncollapse > .column,
+  .row.xlarge-uncollapse > .columns {
+    padding-left: 1.875rem;
+    padding-right: 1.875rem;
+    float: left; } }
+
+@media only screen and (min-width: 120.0625em) {
+  .xxlarge-push-0 {
+    position: relative;
+    left: 0;
+    right: auto; }
+  .xxlarge-pull-0 {
+    position: relative;
+    right: 0;
+    left: auto; }
+  .xxlarge-push-1 {
+    position: relative;
+    left: 8.3333333333%;
+    right: auto; }
+  .xxlarge-pull-1 {
+    position: relative;
+    right: 8.3333333333%;
+    left: auto; }
+  .xxlarge-push-2 {
+    position: relative;
+    left: 16.6666666667%;
+    right: auto; }
+  .xxlarge-pull-2 {
+    position: relative;
+    right: 16.6666666667%;
+    left: auto; }
+  .xxlarge-push-3 {
+    position: relative;
+    left: 25%;
+    right: auto; }
+  .xxlarge-pull-3 {
+    position: relative;
+    right: 25%;
+    left: auto; }
+  .xxlarge-push-4 {
+    position: relative;
+    left: 33.3333333333%;
+    right: auto; }
+  .xxlarge-pull-4 {
+    position: relative;
+    right: 33.3333333333%;
+    left: auto; }
+  .xxlarge-push-5 {
+    position: relative;
+    left: 41.6666666667%;
+    right: auto; }
+  .xxlarge-pull-5 {
+    position: relative;
+    right: 41.6666666667%;
+    left: auto; }
+  .xxlarge-push-6 {
+    position: relative;
+    left: 50%;
+    right: auto; }
+  .xxlarge-pull-6 {
+    position: relative;
+    right: 50%;
+    left: auto; }
+  .xxlarge-push-7 {
+    position: relative;
+    left: 58.3333333333%;
+    right: auto; }
+  .xxlarge-pull-7 {
+    position: relative;
+    right: 58.3333333333%;
+    left: auto; }
+  .xxlarge-push-8 {
+    position: relative;
+    left: 66.6666666667%;
+    right: auto; }
+  .xxlarge-pull-8 {
+    position: relative;
+    right: 66.6666666667%;
+    left: auto; }
+  .xxlarge-push-9 {
+    position: relative;
+    left: 75%;
+    right: auto; }
+  .xxlarge-pull-9 {
+    position: relative;
+    right: 75%;
+    left: auto; }
+  .xxlarge-push-10 {
+    position: relative;
+    left: 83.3333333333%;
+    right: auto; }
+  .xxlarge-pull-10 {
+    position: relative;
+    right: 83.3333333333%;
+    left: auto; }
+  .xxlarge-push-11 {
+    position: relative;
+    left: 91.6666666667%;
+    right: auto; }
+  .xxlarge-pull-11 {
+    position: relative;
+    right: 91.6666666667%;
+    left: auto; }
+  .column,
+  .columns {
+    position: relative;
+    padding-left: 1.875rem;
+    padding-right: 1.875rem;
+    float: left; }
+  .xxlarge-1 {
+    width: 8.3333333333%; }
+  .xxlarge-2 {
+    width: 16.6666666667%; }
+  .xxlarge-3 {
+    width: 25%; }
+  .xxlarge-4 {
+    width: 33.3333333333%; }
+  .xxlarge-5 {
+    width: 41.6666666667%; }
+  .xxlarge-6 {
+    width: 50%; }
+  .xxlarge-7 {
+    width: 58.3333333333%; }
+  .xxlarge-8 {
+    width: 66.6666666667%; }
+  .xxlarge-9 {
+    width: 75%; }
+  .xxlarge-10 {
+    width: 83.3333333333%; }
+  .xxlarge-11 {
+    width: 91.6666666667%; }
+  .xxlarge-12 {
+    width: 100%; }
+  .xxlarge-offset-0 {
+    margin-left: 0 !important; }
+  .xxlarge-offset-1 {
+    margin-left: 8.3333333333% !important; }
+  .xxlarge-offset-2 {
+    margin-left: 16.6666666667% !important; }
+  .xxlarge-offset-3 {
+    margin-left: 25% !important; }
+  .xxlarge-offset-4 {
+    margin-left: 33.3333333333% !important; }
+  .xxlarge-offset-5 {
+    margin-left: 41.6666666667% !important; }
+  .xxlarge-offset-6 {
+    margin-left: 50% !important; }
+  .xxlarge-offset-7 {
+    margin-left: 58.3333333333% !important; }
+  .xxlarge-offset-8 {
+    margin-left: 66.6666666667% !important; }
+  .xxlarge-offset-9 {
+    margin-left: 75% !important; }
+  .xxlarge-offset-10 {
+    margin-left: 83.3333333333% !important; }
+  .xxlarge-offset-11 {
+    margin-left: 91.6666666667% !important; }
+  .xxlarge-reset-order {
+    float: left;
+    left: auto;
+    margin-left: 0;
+    margin-right: 0;
+    right: auto; }
+  .column.xxlarge-centered,
+  .columns.xxlarge-centered {
+    margin-left: auto;
+    margin-right: auto;
+    float: none; }
+  .column.xxlarge-uncentered,
+  .columns.xxlarge-uncentered {
+    float: left;
+    margin-left: 0;
+    margin-right: 0; }
+  .column.xxlarge-centered:last-child,
+  .columns.xxlarge-centered:last-child {
+    float: none; }
+  .column.xxlarge-uncentered:last-child,
+  .columns.xxlarge-uncentered:last-child {
+    float: left; }
+  .column.xxlarge-uncentered.opposite,
+  .columns.xxlarge-uncentered.opposite {
+    float: right; }
+  .row.xxlarge-collapse > .column,
+  .row.xxlarge-collapse > .columns {
+    padding-left: 0;
+    padding-right: 0; }
+  .row.xxlarge-collapse .row {
+    margin-left: 0;
+    margin-right: 0; }
+  .row.xxlarge-uncollapse > .column,
+  .row.xxlarge-uncollapse > .columns {
+    padding-left: 1.875rem;
+    padding-right: 1.875rem;
+    float: left; } }
+
 .accordion {
   margin-bottom: 0; }
   .accordion:before, .accordion:after {
@@ -6369,6 +6747,9 @@ html {
   text-align: center !important; }
   @media only screen and (max-width: 40.625em) {
     .hero {
+      height: 400px; } }
+  @media only screen and (min-width: 40.6875em) and (max-width: 63.9375em) {
+    .hero {
       height: 500px; } }
   @media only screen and (min-width: 64em) {
     .hero {
@@ -6400,9 +6781,9 @@ html {
     padding-left: 0; }
   .nav ul li:last-child {
     padding-right: 0; }
-  @media screen and (min-width: 450px) {
+  @media screen and (max-width: 800px) {
     .nav ul li {
-      padding-left: 40px; } }
+      padding-left: 80px; } }
 
 .nav ul li a {
   font-size: 1em;
@@ -6420,6 +6801,21 @@ html {
 .nav__logo {
   width: 120px;
   margin-top: 25px; }
+
+@media only screen and (max-width: 40.625em) {
+  .nav ul {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-justify-content: space-around;
+        -ms-flex-pack: distribute;
+            justify-content: space-around; }
+    .nav ul li {
+      padding-left: 0; }
+      .nav ul li a {
+        font-size: .8em;
+        line-height: 60px; } }
 
 .about {
   color: #242F42; }
